--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -2,5 +2,9 @@
   "appTitle": "Куда пойти сегодня?",
   "placesTabName": "Заведения",
   "cardTabName": "Моя Карта",
-  "profileTabName": "Профиль"
+  "profileTabName": "Профиль",
+  "codeFromSms": "Код из смс",
+  "sendCode": "Отправить",
+  "newCodeIn": "Новый код через: ",
+  "seconds": " сек"
 }
