--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -7,8 +7,7 @@
   "surname": "Фамилия",
   "email": "E-mail",
   "birthday": "День рождения",
+  "valueIsIncorrect": "Значение некорректно",
   "acceptUserAgreement": "Я принимаю\nпользовательское\nсоглашение",
-  "signUp": "Зарегистрироваться",
-  "emailError": "Введите действительный\nадрес электронной почты",
-  "fullnameError": "Неправильно\nвведено имя или фамилия"
+  "signUp": "Зарегистрироваться"
 }
