--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -9,5 +9,6 @@
   "birthday": "День рождения",
   "valueIsIncorrect": "Значение некорректно",
   "acceptUserAgreement": "Я принимаю\nпользовательское\nсоглашение",
-  "signUp": "Зарегистрироваться"
+  "signUp": "Зарегистрироваться",
+  "birthdayMask": "ДД/ММ/ГГГГ"
 }
