feat: register_screen (#34)
* feat: registration_layout

* fix: safearea widget

* fix: main route

* fixes: register_screen

* fix: ios build and changelog

* fixes

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -6,6 +6,14 @@
   "placesTabName": "Places",
   "cardTabName": "My Card",
   "profileTabName": "Profile",
+  "name": "Name",
+  "surname": "Surname",
+  "email": "E-mail",
+  "birthday": "Birthday",
+  "valueIsIncorrect": "Value is incorrect",
+  "acceptUserAgreement": "I accept the\nuser agreement",
+  "signUp": "Sign up",
+  "birthdayMask": "DD/MM/YYYY",
   "phoneNumberLabel": "Phone number",
   "sendButtonLabel": "Send"
 }
