feat: code_screen (#35)
* feat: init code_screen

* fix: main_screen

* fix: github error

* fix: print to debugPrint

* fix: formatting

* fix: logo

* fix: pubspec.yaml

* fix: tests

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -6,6 +6,10 @@
   "placesTabName": "Places",
   "cardTabName": "My Card",
   "profileTabName": "Profile",
+  "codeFromSms": "Code from sms",
+  "sendCode": "Send",
+  "newCodeIn": "New code in: ",
+  "seconds": " sec",
   "name": "Name",
   "surname": "Surname",
   "email": "E-mail",
