--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -3,6 +3,10 @@
   "placesTabName": "Заведения",
   "cardTabName": "Моя Карта",
   "profileTabName": "Профиль",
+  "codeFromSms": "Код из смс",
+  "sendCode": "Отправить",
+  "newCodeIn": "Новый код через: ",
+  "seconds": " сек",
   "name": "Имя",
   "surname": "Фамилия",
   "email": "E-mail",
