--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -19,5 +19,6 @@
   "signUp": "Sign up",
   "birthdayMask": "DD/MM/YYYY",
   "phoneNumberLabel": "Phone number",
-  "sendButtonLabel": "Send"
+  "sendButtonLabel": "Send",
+  "authError": "Authorization failed! Try again"
 }
