init!: facebook auth

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <string name="facebook_app_id">1055153198358461</string> 
-   <string name="fb_login_protocol_scheme">fb1055153198358461</string>
-   <string name="app_name">Where To Go Today?</string> 
+   <string name="app_name">wtgt_auth</string>
+   <string name="facebook_app_id">321585666565525</string>
+   <string name="fb_login_protocol_scheme">fb321585666565525</string>
+   <string name="facebook_client_token">c1ddc3aaa8607457d313fcb27f253a6d</string>
 
 </resources>
