feat: code_vm complete

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -7,6 +7,7 @@
   "cardTabName": "My Card",
   "profileTabName": "Profile",
   "codeFromSms": "Code from sms",
+  "requestCode": "Request code",
   "sendCode": "Send",
   "newCodeIn": "New code in: ",
   "seconds": " sec",
