feat: vk login (#46)
* feat: VK plugin setup

* feat: VK login implementation

* fix: changelog update

* fix: use bloc for auth

* fix: main screen route

* fix: test and imports

* fix: vm update

* fix: vk auth init update

* fix: bloc update

* fix: constructor reduce

* fix: auth bloc test

* fix: code screen test

* fix: vk auth tests added

* fix: dependency validator error

* Revert "fix: dependency validator error"

This reverts commit 8d5a12e6

* fix: dependency validator error

Co-authored-by: Andrey Rankov <andreyr@appcard.com>

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -20,5 +20,6 @@
   "signUp": "Sign up",
   "birthdayMask": "DD/MM/YYYY",
   "phoneNumberLabel": "Phone number",
-  "sendButtonLabel": "Send"
+  "sendButtonLabel": "Send",
+  "authError": "Authorization failed! Try again"
 }
