--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -23,5 +23,5 @@
   "onboardingSecondTitle": "Бронируйте столики и\nделайте заказ на\nвыбранное время и\nдату.",
   "onboardingThirdTitle": "Предоставляйте свой QR\nофициантам для\nнакопления баллов\nлояльности.",
   "skip": "Пропустить",
-  "further": "Далее"
+  "next": "Далее"
 }
