--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -18,5 +18,10 @@
   "birthdayMask": "ДД/ММ/ГГГГ",
   "phoneNumberLabel": "Номер телефона",
   "sendButtonLabel": "Отправить",
-  "authError": "Авторизация не удалась! Попробуйте еще раз"
+  "authError": "Авторизация не удалась! Попробуйте еще раз",
+  "onboardingFirstTitle": "Выбирайте места и\nдобавляйте их в\nсписок избранного.",
+  "onboardingSecondTitle": "Бронируйте столики и\nделайте заказ на\nвыбранное время и\nдату.",
+  "onboardingThirdTitle": "Предоставляйте свой QR\nофициантам для\nнакопления баллов\nлояльности.",
+  "skip": "Пропустить",
+  "next": "Далее"
 }
