feat: user profile favorites & logout button

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -21,5 +21,7 @@
   "birthdayMask": "DD/MM/YYYY",
   "phoneNumberLabel": "Phone number",
   "sendButtonLabel": "Send",
-  "authError": "Authorization failed! Try again"
+  "authError": "Authorization failed! Try again",
+  "profileFavoritesTitle": "Favorites",
+  "profileSignOut": "Sign out"
 }
