--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -21,5 +21,7 @@
   "birthdayMask": "DD/MM/YYYY",
   "phoneNumberLabel": "Phone number",
   "sendButtonLabel": "Send",
-  "authError": "Authorization failed! Try again"
+  "authError": "Authorization failed! Try again",
+  "restaurantName": "The name of the restaurant?",
+  "m": "m"
 }
