fix: after merge

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -26,8 +26,7 @@
   "onboardingSecondTitle": "Book tables and\nmake an order for\nthe selected\ntime and date.",
   "onboardingThirdTitle": "Provide your QR\nto the waiters to\naccumulate loyalty\npoints.",
   "skip": "Skip",
-  "next": "Next"
-  "authError": "Authorization failed! Try again",
+  "next": "Next",
   "restaurantName": "The name of the restaurant?",
   "m": "m"
 }
