--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -23,7 +23,7 @@
   "onboardingSecondTitle": "Бронируйте столики и\nделайте заказ на\nвыбранное время и\nдату.",
   "onboardingThirdTitle": "Предоставляйте свой QR\nофициантам для\nнакопления баллов\nлояльности.",
   "skip": "Пропустить",
-  "next": "Далее"
+  "next": "Далее",
   "profileFavoritesTitle": "Избранное",
   "profileSignOut": "Выйти из профиля"
 }
