fix: code review comments

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -28,5 +28,6 @@
   "skip": "Skip",
   "next": "Next",
   "profileFavoritesTitle": "Favorites",
-  "profileSignOut": "Sign out"
+  "profileSignOut": "Sign out",
+  "m": "m"
 }
