--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -25,5 +25,6 @@
   "skip": "Пропустить",
   "next": "Далее",
   "profileFavoritesTitle": "Избранное",
-  "profileSignOut": "Выйти из профиля"
+  "profileSignOut": "Выйти из профиля",
+  "m": "м"
 }
