fix: after review

--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -24,6 +24,6 @@
   "onboardingThirdTitle": "Предоставляйте свой QR\nофициантам для\nнакопления баллов\nлояльности.",
   "skip": "Пропустить",
   "next": "Далее",
-  "restaurantName": "Название заведения?",
+  "placeName": "Название заведения?",
   "m": "м"
 }
