--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -27,6 +27,6 @@
   "onboardingThirdTitle": "Provide your QR\nto the waiters to\naccumulate loyalty\npoints.",
   "skip": "Skip",
   "next": "Next",
-  "restaurantName": "The name of the restaurant?",
+  "placeName": "The name of the place?",
   "m": "m"
 }
