--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -26,5 +26,6 @@
   "onboardingSecondTitle": "Book tables and\nmake an order for\nthe selected\ntime and date.",
   "onboardingThirdTitle": "Provide your QR\nto the waiters to\naccumulate loyalty\npoints.",
   "skip": "Skip",
-  "next": "Next"
+  "next": "Next",
+  "book": "Book"
 }
