--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -25,5 +25,6 @@
   "skip": "Пропустить",
   "next": "Далее",
   "restaurantName": "Название заведения?",
-  "m": "м"
+  "m": "м",
+  "sharePlaceSubject": "Хэй! Зацени это место:"
 }
