feat: main screen (#62)
* feat: registration_layout

* fix: safearea widget

* fix: main route

* fixes: register_screen

* fix: ios build and changelog

* fixes

* feat: registration_logic

* fix: buttonstate enum

* fix

* feat: viewmodel and route

* fix!: viewmodel

* fix: mobx

* fix: imports

* fix: golden test with viewmodel

* fix: test mocking

* fix: errors

* feat: main screen + places tab

* fix: after merge

* chore: update Changelog.md

* chore: update formatting

* fix: after merge

* fix: golden tests

* regenerate goldens

* fix: after review

* fix: after analyze error

* fix: after analyze error

* fix: after merge

* fix: after merge

* fix: after analyze error

* fix: after analyze error

* fix: ios build

* fix: ios build

Co-authored-by: Dmitry Dudunov <dydynovdima6@gmail.com>
Co-authored-by: Dmitry Krutskikh <dmitry.krutskikh@gmail.com>

--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -23,5 +23,7 @@
   "onboardingSecondTitle": "Бронируйте столики и\nделайте заказ на\nвыбранное время и\nдату.",
   "onboardingThirdTitle": "Предоставляйте свой QR\nофициантам для\nнакопления баллов\nлояльности.",
   "skip": "Пропустить",
-  "next": "Далее"
+  "next": "Далее",
+  "placeName": "Название заведения?",
+  "m": "м"
 }
