feat: profile screen (#63)
* feat: user profile layout

* feat: user profile header

* feat: user profile favorites & logout button

* fix: limit text width to prevent overflow

fix: limit text width to prevent overflow

* fix: changelog update

* fix: localization files

* fix: code review comments

* fix: encapsulate place tap function

* fix: viewmodel added

Co-authored-by: Andrey Rankov <andreyr@appcard.com>

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -28,5 +28,7 @@
   "skip": "Skip",
   "next": "Next",
   "placeName": "The name of the place?",
-  "m": "m"
+  "m": "m",
+  "profileFavoritesTitle": "Favorites",
+  "profileSignOut": "Sign out"
 }
