--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -25,5 +25,7 @@
   "skip": "Пропустить",
   "next": "Далее",
   "placeName": "Название заведения?",
-  "m": "м"
+  "m": "м",
+  "profileFavoritesTitle": "Избранное",
+  "profileSignOut": "Выйти из профиля"
 }
