feat: place card (#73)
* feat: registration_layout

* fix: safearea widget

* fix: main route

* fixes: register_screen

* fix: ios build and changelog

* fixes

* feat: registration_logic

* fix: buttonstate enum

* fix

* feat: viewmodel and route

* fix!: viewmodel

* fix: mobx

* fix: imports

* fix: golden test with viewmodel

* fix: test mocking

* fix: errors

* feat: main screen + places tab

* fix: after merge

* chore: update Changelog.md

* chore: update formatting

* fix: after merge

* fix: golden tests

* feat: place card

* chore: update changelog

* fix: after merge

* fix: after comments in PR

* fix: ignore transitive dependency

* fix: formatting error

* chore: goldens update

Co-authored-by: Dmitry Dudunov <dydynovdima6@gmail.com>
Co-authored-by: Andrey Rankov <andreyr@appcard.com>

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -30,5 +30,6 @@
   "placeName": "The name of the place?",
   "m": "m",
   "profileFavoritesTitle": "Favorites",
-  "profileSignOut": "Sign out"
+  "profileSignOut": "Sign out",
+  "sharePlaceSubject": "Hey! Check out this place:"
 }
