--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -27,5 +27,6 @@
   "placeName": "Название заведения?",
   "m": "м",
   "profileFavoritesTitle": "Избранное",
-  "profileSignOut": "Выйти из профиля"
+  "profileSignOut": "Выйти из профиля",
+  "sharePlaceSubject": "Хэй! Зацени это место:"
 }
